# app/Http/Controllers/VotantController.php
@@ -5,24 +5,27 @@ namespace App\Http\Controllers;
 use App\Http\Resources\VotantResource;
 use App\Models\Votant;
 use App\Models\Vote;
+use App\Services\OtpService;
 use Illuminate\Http\Request;
 
 class VotantController extends Controller
 {
     public function storeByPhone(Request $request)
     {
+
         $request->validate([
-            'phone' => 'required|string|max:15',
-            'vote_id' => 'required|exists:votes,id',
+            'phone' => 'required|string|max:25',
+            'vote_uuid' => 'required|exists:votes,id',
+            'contry_code' => 'required',
+            'contry_iso_code' => 'nullable',
         ]);
 
-        $vontant = Votant::create([
-            'vote_id' => $request->vote_id,
-            'identity' => $request->phone,
-            'ip_address' => $request->ip(),
-            'user_agent' => $request->userAgent(),
-            'country' => $request->header('X-Country'), // Assuming country is passed in header
-        ]);
+        $vontant = $this->save($request);
+
+        if ($vontant->is_voted) {
+            return self::errorJson('Vous avez déjà voté avec ce numéro de téléphone.', 403);
+        }
+        // $response = OtpService::make()->send($request->phone);
 
         return self::successJson(new VotantResource($vontant), 'Votant stored successfully');
     }
@@ -30,29 +33,35 @@ class VotantController extends Controller
     public function storeByEmail(Request $request)
     {
         $request->validate([
-            'email' => 'required|email|max:255',
-            'vote_uuid' => 'required|string',
+            'email' => 'required|email',
+            'vote_uuid' => 'required|exists:votes,uuid',
         ]);
 
-        /*@var Vote $vote */
-        $vote =  Vote::byUuid($request->vote_uuid)->firstOrFail();
+        $vontant = $this->save($request);
 
-        $vontant = Votant::findByIdentity($vote->id, $request->email)->first();
-
-        if ($vontant && $vontant->is_voted) {
+        if ($vontant->is_voted) {
             return self::errorJson('Vous avez déjà voté avec cet email.', 403);
         }
 
-        if (!$vontant) {
+        return self::successJson(new VotantResource($vontant), 'Votant stored successfully');
+    }
+
+    private function save(Request $request): Votant
+    {
+        /* @var Vote $vote */
+        $vote = Vote::byUuid($request->vote_uuid)->first();
+        $vontant = Votant::findByIdentity($vote->id, $request->email)->first();
+
+        if (! $vontant) {
             $vontant = Votant::create([
                 'vote_id' => $vote->id,
-                'identity' => $request->email,
+                'identity' => $request->email ?? $request->phone,
                 'ip_address' => $request->ip(),
                 'user_agent' => $request->userAgent(),
-                'country' => $request->header('X-Country'),
+                'country' => $request->header('X-Country', $request->contry_iso_code),
             ]);
         }
 
-        return self::successJson(new VotantResource($vontant), 'Votant stored successfully');
+        return $vontant;
     }
 }
